--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-cors": "^0.11.4",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-cors": "^1.6",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
