--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "srmklive/paypal": "^1.6",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
