--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,4 @@
+RewriteCond %{REQUEST_URI} !^/account/
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
