--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,3 +20,6 @@ RewriteCond %{REQUEST_URI} !^/account/
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+</IfModule>
