--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ APP_NAME="Jane VERDE"
 APP_ENV=local
 APP_KEY=base64:CWf6pFh5g6j71yasJTA17/k8C+8TsmXlynvUSvd3yBU=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL="http://jv.com"
+REACT_APP_URL="http://account.jv.com"
 
 LOG_CHANNEL=stack
 
