--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ APP_NAME="Jane VERDE"
 APP_ENV=local
 APP_KEY=base64:CWf6pFh5g6j71yasJTA17/k8C+8TsmXlynvUSvd3yBU=
 APP_DEBUG=true
-APP_URL="http://127.0.0.1:8000"
-REACT_APP_URL="http://account.127.0.0.1:8000"
-#APP_URL="http://jv.com"
-#REACT_APP_URL="http://account.jv.com"
+#APP_URL="http://127.0.0.1:8000"
+#REACT_APP_URL="http://account.127.0.0.1:8000"
+APP_URL="http://jv.com"
+REACT_APP_URL="http://account.jv.com"
 
 LOG_CHANNEL=stack
 
@@ -14,8 +14,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=store
 DB_USERNAME=root
-DB_PASSWORD=Drv0B0nsa123
-#DB_PASSWORD=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
